# xcbclip

./: .gitignore  Makefile  Makefile.am  configure.ac  main.c  xcb-contrib.c  xcb-contrib.h  xcbclip.h  xcdef.h  xclib.c  xclib.h  xclip.c  xcprint.c  xcprint.h  xctest
debian/: changelog  control  copyright  rules
